# BlockedCar

./: README.md  pyproject.toml
docker/: docker-compose.yaml
src/blockedcar/: __init__.py  __main__.py
src/blockedcar/adapters/broker/: factory.py
src/blockedcar/adapters/fsm/storage/: base.py  nats.py
src/blockedcar/main/configuration/: factory.py  loader.py  schemas.py
src/blockedcar/main/di/: setup.py
src/blockedcar/presentation/telegram/: factory.py
src/blockedcar/presentation/telegram/dialogs/: __init__.py
src/blockedcar/presentation/telegram/dialogs/block_menu/: dialog.py  getters.py  handlers.py  states.py
src/blockedcar/presentation/telegram/dialogs/main_menu/: dialog.py
src/blockedcar/presentation/telegram/dialogs/notify_menu/: dialog.py  states.py
src/blockedcar/presentation/telegram/dialogs/vacate_menu/: states.py
src/blockedcar/presentation/telegram/handlers/: __init__.py  user.py
