[project]
name = "blockedcar"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Mark", email = "zemly@duck.com" }
]
dependencies = [
    "faststream[nats]>=0.5.34",
    "psycopg>=3.2.4",
    "aiogram-dialog>=2.3.1",
    "dishka>=1.4.2",
    "adaptix>=3.0.0b9",
    "sqlalchemy>=2.0.37",
    "dynaconf>=3.2.7",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
start = "python -m src.blockedcar"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/blockedcar"]

